--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+
+
+    <!-- navbar,menu bar with fas fa-bars from font-awesome -->
     <nav>
       <div class="logo"><img src="image/assets/img/logo.png" alt=""></div>
       <input type="checkbox" id="click">
@@ -23,8 +26,9 @@
         <li><a href="#">contact</a></li>
       </ul>
     </nav>
+    <!-- end of navibar-->
 
-
+    <!-- hero sections -->
     <section class="hero-board">
       <div class="hero-content">
         <span class="board-text2">lets start your</span>
@@ -37,8 +41,9 @@
         <div class="mail-icon"><a href="#"><img src="image/assets/gfx/icons/mail-icon.svg" width="30" alt="mail-icon"></a></div>
       </div>
     </section>
+    <!-- end of the hero section -->
 
-
+    <!-- div for main container -->
     <div class="main-container">
       <div class="text-content">
         <div class="quote-icon"><img src="image/assets/gfx/icons/quote-icon.svg" alt=""></div>
@@ -52,6 +57,7 @@
           Berge fasziniert sind, die Website „Mountains“ ist eine wunderbare Quelle für Informationen und Inspiration.
         </p>
       </div>
+      <!-- main container image cards  -->
       <div class="main-image-card-container">
         <div class="image-card image1">
             <div class="image-card-caption">Mt Cook</div>
@@ -62,7 +68,6 @@
         <div class="image-card image3">
             <div class="image-card-caption">Alpamayo</div>
         </div>
-        <!-- Add more image cards as needed -->
         <div class="image-card image4">
           <div class="image-card-caption">Großglockner</div>
         </div>
@@ -74,9 +79,10 @@
         </div>
       </div>  
     </div>
+    <!-- End of Main Container-->
 
       
-      
+    <!-- Another section -->  
     <div class="container-new-section">
       <div class="left-cont">
         <h4>MOUNTAINS are GREAT!</h4>
@@ -92,15 +98,17 @@
         </p>
         <a href="#" class="buttonLink">LINK ZU WIKIPEDIA</a>
       </div>
-      <div class="right-content"><img src="image/assets/img/weisshorn.jpg" class="right-image" alt="Mountain Image"></div>
+      <div class="right-content">
+        <img src="image/assets/img/weisshorn.jpg" class="right-image" alt="Mountain Image"></div>
+        <img src="image/assets/gfx/icons/mountain-icon.svg" class="mountain-icon" alt="">
     </div>
   <!-- End of New section-->
 
-
+  <!--wrapper for email and socials-->
   <div class="wrapper">
     <div class="wraper-content">
-      <div>
-        <span>NEWSLETTER</span>
+      <div class="wrapper-for-email">
+        <span class="newsletter">NEWSLETTER</span>
         <form>
           <input type="email" name="Email" placeholder="Email" required>
           <button type="submit">SENDEN</button>
@@ -109,13 +117,14 @@
       <div class="socials">
         <span class="follow-us">FOLLOW US</span>
         <div>
-          <i id="facebook fb"><img src="image/assets/gfx/socials/facebook-icon.svg" width="70" alt=""></i>
-          <i id="facebook insta"><img src="image/assets/gfx/socials/instagram-icon.svg" width="70" alt=""></i>
-          <i id="facebook in"><img src="image/assets/gfx/socials/linkedin-icon.svg" width="70" alt=""></i>
+          <i id="socials-icon fb"><img src="image/assets/gfx/socials/facebook-icon.svg" class="socials-icon" width="70" alt=""></i>
+          <i id="socials-icon inst"><img src="image/assets/gfx/socials/instagram-icon.svg"  class="socials-icon" width="70" alt=""></i>
+          <i id="socials-icon in"><img src="image/assets/gfx/socials/linkedin-icon.svg"    class="socials-icon" width="70" alt=""></i>
         </div>
       </div>
     </div>
  </div>
+ <!--End of wrapper-->
 
  <footer>
   <img src="image/assets/img/logo.png" width="100" alt="Logo" class="footer-logo">
