--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+  
 
 
     <!-- navbar,menu bar with fas fa-bars from font-awesome -->
@@ -105,35 +106,40 @@
   <!-- End of New section-->
 
   <!--wrapper for email and socials-->
-  <div class="wrapper">
-    <div class="wraper-content">
-      <div class="wrapper-for-email">
-        <span class="newsletter">NEWSLETTER</span>
-        <form>
-          <input type="email" name="Email" placeholder="Email" required>
-          <button type="submit">SENDEN</button>
-        </form>
-      </div>
-      <div class="socials">
-        <span class="follow-us">FOLLOW US</span>
-        <div>
-          <i id="socials-icon fb"><img src="image/assets/gfx/socials/facebook-icon.svg" class="socials-icon" width="70" alt=""></i>
-          <i id="socials-icon inst"><img src="image/assets/gfx/socials/instagram-icon.svg"  class="socials-icon" width="70" alt=""></i>
-          <i id="socials-icon in"><img src="image/assets/gfx/socials/linkedin-icon.svg"    class="socials-icon" width="70" alt=""></i>
+    <div class="wrapper">
+      <div class="wraper-content">
+        <div class="wrapper-for-email">
+          <span class="newsletter">NEWSLETTER</span>
+          <form>
+            <input type="email" name="Email" placeholder="Email" required>
+            <button type="submit">SENDEN</button>
+          </form>
+        </div>
+        <div class="socials">
+          <span class="follow-us">FOLLOW US</span>
+          <div>
+            <i id="socials-icon fb"><img src="image/assets/gfx/socials/facebook-icon.svg" class="socials-icon" width="70" alt=""></i>
+            <i id="socials-icon inst"><img src="image/assets/gfx/socials/instagram-icon.svg"  class="socials-icon" width="70" alt=""></i>
+            <i id="socials-icon in"><img src="image/assets/gfx/socials/linkedin-icon.svg"    class="socials-icon" width="70" alt=""></i>
+          </div>
         </div>
       </div>
     </div>
- </div>
  <!--End of wrapper-->
 
- <footer>
-  <img src="image/assets/img/logo.png" width="100" alt="Logo" class="footer-logo">
-  <div class="copyright">&copy; 2023 Moses Ekpenisi</div>
-  <div class="footer-text"> 
-    <h3>IMPRESSUM</h3>
-    <h3>DATENSCHUTZ</h3>
-  </div>
-</footer>
+
+ <!--footer-->
+    <footer>
+
+      <img src="image/assets/img/logo.png" width="100" alt="Logo" class="footer-logo">
+      <div class="copyright">&copy; 2023 Moses Ekpenisi</div>
+      <div class="footer-text"> 
+        <h3>IMPRESSUM</h3>
+        <h3>DATENSCHUTZ</h3>
+      </div>
+
+    </footer>
+  <!--end footer-->
 
 
 
